--- a/about.html
+++ b/about.html
@@ -132,7 +132,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h3 class="purple-text"><b>Natalie Ajemian</b> ~ President</h3>
-                        <h3><b>Archisma Golia</b> ~ Vice President</h3>
+                        <h3><b>Archishma Goli</b> ~ Vice President</h3>
                         <h3><b>Cora Adkins & Elizabeth Hillcock</b> ~ Outreach Managers and Marketing Leads</h3>
 			<h3><b>Christina Nikolova</b> ~ Financial Lead</h3>
                     </div>
